header links fix color contrast

--- a/style/_header.scss
+++ b/style/_header.scss
@@ -112,7 +112,8 @@
             gap: 1.5rem;
             
             a {
-                color: $grayish-blue;
+                // color: $grayish-blue;
+                color: #575766;
                 text-decoration: none;
                 cursor: pointer;
                 font-size: .9rem;
